<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cyurius</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="swipe_text">&lt;--SWIPE--</string>
    <string name="sem1">1</string>
    <string name="sem2">2</string>
    <string name="sem3">3</string>
    <string name="sem4">4</string>
    <string name="sem5">5</string>
    <string name="sem6">6</string>
    <string name="sem7">7</string>
    <string name="sem8">8</string>
    <string name="welcome"> [&#62;&#62;&#62;] \t NOTES \t [&#62;&#62;&#62;] \n\n [&#60;&#60;&#60;] \t ARCHIVE \t [&#60;&#60;&#60;] </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_subject_tab">Cyurius</string>
    <string name="title_activity_notes_tab">Cyurius</string>
    <string name="title_activity_Download_File">Cyurius</string>

</resources>
